Update model structure and more efficient on memory

--- a/train.ipynb
+++ b/train.ipynb
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,6 +61,7 @@
     "parser.add_argument('-o', '--output', dest='output', default='', help='Location of output(s)')\n",
     "parser.add_argument('-d', '--debug', type=str2bool, dest='debug', default=True, help='Debug logging specific files and extra verbosity')\n",
     "parser.add_argument('-c', '--use_cuda', type=str2bool, dest='use_cuda', default=True, help='Use cuda if cuda supported')\n",
+    "parser.add_argument('--use_half', type=str2bool, dest='use_half', default=True, help='Use half precision on training (half precision seems to produce NaN\\'s)')\n",
     "parser.add_argument('-a', '--artifacts', dest='artifacts', default='', help='Directory to save artifacts such as checkpoints')\n",
     "parser.add_argument('-e', '--epochs', type=int, dest='train_epochs', default=10, help='Number of epochs to train on')\n",
     "parser.add_argument('-p', '--print_every', type=int, dest='print_every', default=100, help='After how many iterations to print a status')\n",
@@ -77,6 +78,8 @@
     "args, unknown = parser.parse_known_args()\n",
     "\n",
     "use_cuda = args.use_cuda and torch.has_cuda\n",
+    "\n",
+    "use_half = args.use_half\n",
     "\n",
     "device = 'cuda' if use_cuda else 'cpu'\n",
     "\n",
@@ -112,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,9 +125,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Parsing folder: aldnoah_zero_subs\n",
+      "Longest with 9 in [HorribleSubs] Aldnoah Zero - 01 [720p].ass\n",
+      "Longest with 17 in [HorribleSubs] Aldnoah Zero - 01 [720p].ass\n",
+      "Longest with 22 in [HorribleSubs] Aldnoah Zero - 01 [720p].ass\n",
+      "Longest with 27 in [HorribleSubs] Aldnoah Zero - 01 [720p].ass\n",
+      "Longest with 29 in [HorribleSubs] Aldnoah Zero - 01 [720p].ass\n",
+      "Longest with 33 in [HorribleSubs] Aldnoah Zero - 01 [720p].ass\n",
+      "Longest with 41 in [HorribleSubs] Aldnoah Zero - 01 [720p].ass\n",
+      "Longest with 46 in [HorribleSubs] Aldnoah Zero - 01 [720p].ass\n",
+      "Longest with 50 in [HorribleSubs] Aldnoah Zero - 10 [720p].ass\n",
+      "Parsing folder: angel_beats_subs\n",
+      "Longest with 58 in [Mazui] Angel Beats - Stairway To Heaven.ass\n",
+      "Longest with 66 in [Mazui] Angel Beats - 02.ass\n",
+      "Longest with 92 in [Mazui] Angel Beats - 03.ass\n",
+      "Longest with 112 in [Mazui] Angel Beats - 05.ass\n",
+      "Parsing folder: ano_hana_subs\n",
+      "Longest with 118 in [gg]_Ano_Hi_Mita_Hana_no_Namae_o_Bokutachi_wa_Mada_Shiranai_-_06_[DBA309AC].ass\n",
+      "Longest with 124 in [gg]_Ano_Hi_Mita_Hana_no_Namae_o_Bokutachi_wa_Mada_Shiranai_-_11_[35D3FBF4].ass\n",
+      "Longest with 150 in [gg]_Ano_Hi_Mita_Hana_no_Namae_o_Bokutachi_wa_Mada_Shiranai_-_11_[35D3FBF4].ass\n",
+      "Longest with 173 in [gg]_Ano_Hi_Mita_Hana_no_Namae_o_Bokutachi_wa_Mada_Shiranai_-_11_[35D3FBF4].ass\n",
+      "Parsing folder: aot_subs\n",
+      "Parsing folder: black_clover_subs\n",
+      "Longest with 177 in Black Clover (TV) - 17 [eng].ass\n",
+      "Longest with 181 in Black Clover (TV) - 17 [eng].ass\n",
+      "Longest with 186 in Black Clover (TV) - 17 [eng].ass\n",
+      "Longest with 194 in Black Clover (TV) - 17 [eng].ass\n",
+      "Longest with 200 in Black Clover (TV) - 32 [eng].ass\n",
+      "Longest with 207 in Black Clover (TV) - 32 [eng].ass\n",
+      "Longest with 212 in Black Clover (TV) - 32 [eng].ass\n",
+      "Longest with 218 in Black Clover (TV) - 32 [eng].ass\n",
+      "Longest with 226 in Black Clover (TV) - 62 [720p][Eng].ass\n",
+      "Longest with 233 in Black Clover (TV) - 62 [720p][Eng].ass\n",
+      "Longest with 241 in Black Clover (TV) - 62 [720p][Eng].ass\n",
+      "Longest with 249 in Black Clover (TV) - 62 [720p][Eng].ass\n",
+      "Longest with 268 in Black Clover (TV) - 62 [720p][Eng].ass\n",
+      "Longest with 277 in Black Clover (TV) - 62 [720p][Eng].ass\n",
+      "Parsing folder: cells_at_work_subs\n",
+      "Parsing folder: ditfxx_subs\n",
+      "Longest with 281 in DitFXX(19).ass\n",
+      "Parsing folder: fairy_tale_subs\n",
+      "Parsing folder: fate_ubw_subs\n",
+      "Parsing folder: guilty_crown_subs\n",
+      "Parsing folder: haikyuu_subs\n",
+      "Parsing folder: kaichou_maid_sama_subs\n",
+      "Parsing folder: kill_la_kill_subs\n",
+      "Parsing folder: knk_subs\n",
+      "Parsing folder: kobayashi_subs\n",
+      "Parsing folder: little_witch_subs\n",
+      "Parsing folder: log_horizon_subs\n",
+      "Longest with 286 in [HorribleSubs] Log Horizon 2 - 10 [720p].ass\n",
+      "Longest with 293 in [HorribleSubs] Log Horizon 2 - 10 [720p].ass\n",
+      "Longest with 299 in [HorribleSubs] Log Horizon 2 - 10 [720p].ass\n",
+      "Longest with 303 in [HorribleSubs] Log Horizon 2 - 10 [720p].ass\n",
+      "Parsing folder: madoka_subs\n",
+      "Parsing folder: mahoutsukai_subs\n",
+      "Parsing folder: melancholy_suzumiya_subs\n",
+      "Parsing folder: my_hero_aca_subs\n",
+      "Parsing folder: ngnl_subs\n",
+      "Parsing folder: nichijou_subs\n",
+      "Longest with 313 in [Doki] Nichijou - 25 (1280x720 Hi10P BD AAC) [7DF0AEA8].ass\n",
+      "Longest with 321 in [Doki] Nichijou - 25 (1280x720 Hi10P BD AAC) [7DF0AEA8].ass\n",
+      "Longest with 330 in [Doki] Nichijou - 25 (1280x720 Hi10P BD AAC) [7DF0AEA8].ass\n",
+      "Longest with 342 in [Doki] Nichijou - 08 (1280x720 Hi10P BD AAC) [889A3777].ass\n",
+      "Longest with 377 in [Doki] Nichijou - 08 (1280x720 Hi10P BD AAC) [889A3777].ass\n",
+      "Longest with 413 in [Doki] Nichijou - 08 (1280x720 Hi10P BD AAC) [889A3777].ass\n",
+      "Longest with 420 in [Doki] Nichijou - 08 (1280x720 Hi10P BD AAC) [889A3777].ass\n",
+      "Longest with 457 in [Doki] Nichijou - 08 (1280x720 Hi10P BD AAC) [889A3777].ass\n",
+      "Parsing folder: nisekoi_subs\n",
+      "Parsing folder: one_punch_subs\n",
+      "Parsing folder: promised_neverland_subs\n",
+      "Parsing folder: relife_subs\n",
+      "Parsing folder: rezero_subs\n",
+      "Parsing folder: sangatsu_subs\n",
+      "Parsing folder: shield_hero_subs\n",
+      "Parsing folder: shokugeki_subs\n",
+      "Parsing folder: steins_gate_subs\n",
+      "Parsing folder: tokyo_ghoul_subs\n",
+      "Parsing folder: violet_evergarden_subs\n",
+      "Parsing folder: your_lie_subs\n",
+      "Parsing folder: yugioh_subs\n"
+     ]
+    }
+   ],
    "source": [
     "# FOLDERS = [\n",
     "#     'ditfxx_subs', 'steins_gate_subs', 'guilty_crown_subs',\n",
@@ -136,14 +228,14 @@
     "def get_time(timestr: str) -> int:\n",
     "    time = timestr.split(':')\n",
     "    final_time = 0\n",
-    "    ms = float(time[-1]) * 1000\n",
+    "    ms = float(time[-1]) * 100 #ssa/ass uses hundredths\n",
     "    final_time += int(ms)\n",
     "    for i in range(len(time)-2):\n",
     "        t = time[-2-i]\n",
     "        final_time += multiplier[i] * int(t)\n",
     "    return final_time\n",
     "\n",
-    "normalize_pattern = re.compile(r'(\\{[\\\\\\*][\\w\\(\\)\\\\\\,\\*]*|\\})', re.M)\n",
+    "normalize_pattern = re.compile(r'(\\{[\\\\\\*][\\w\\s\\(\\)\\.\\,\\*\\&\\\\]*|\\})', re.M | re.I)\n",
     "sub_space = re.compile(r'(\\{|\\\\[nN])', re.M)\n",
     "insert_space = re.compile(r'([\\w\\\"])([\\.\\!\\,\\?\\W])')\n",
     "def normalize_text(text: str) -> str:\n",
@@ -168,7 +260,7 @@
     "    for f in dir:\n",
     "        filepath = os.path.join(os.getcwd(), 'data', folder, f)\n",
     "        if not os.path.isfile(filepath): continue\n",
-    "        if debug_mode:\n",
+    "        if debug_mode and False:\n",
     "            print(f'  Opening file: {f}')\n",
     "        with open(filepath, 'r', encoding='utf-8', errors='ignore') as sub_file:\n",
     "            is_event = False\n",
@@ -199,7 +291,9 @@
     "                line = line[len('Dialogue:'):].strip().split(',')\n",
     "                line[len(current_format)-1] = ','.join(line[len(current_format)-1:])\n",
     "                dialogue = dict(zip(current_format, line))\n",
-    "                if not dialogue['Style'].lower() in ['main', 'default', 'italics', 'flashback', 'ngnl-main']: continue\n",
+    "                if not dialogue['Style'].lower() in ['main', 'default', 'italics', 'flashback', 'ngnl-main'] and \\\n",
+    "                    not 'main' in dialogue['Style'].lower() and not 'default' in dialogue['Style'].lower():\n",
+    "                    continue\n",
     "                # Extract variables\n",
     "                speaker = ''\n",
     "                for k in ['Actor', 'Name']:\n",
@@ -322,12 +416,13 @@
     "\n",
     "from vocab import ConversationIter\n",
     "\n",
-    "train_set, test_set = train_test_split(voc.get_conversations(), test_size=test_split)\n",
+    "train_set, test_set = train_test_split(voc.get_conversations(model.in_seq_len, model.out_seq_len), test_size=test_split)\n",
+    "voc = None\n",
+    "print(f'Training data on {len(train_set) + len(test_set)} conversations.')\n",
+    "print(f'Train: {len(train_set)}, Test: {len(test_set)}')\n",
     "\n",
-    "train_set = ConversationIter(train_set, in_seq_len=model.in_seq_len, \\\n",
-    "    out_seq_len=model.out_seq_len, batch_size=batch_size)\n",
-    "test_set = ConversationIter(test_set, in_seq_len=model.in_seq_len, \\\n",
-    "    out_seq_len=model.out_seq_len, batch_size=batch_size)"
+    "train_set = ConversationIter(train_set, batch_size=batch_size)\n",
+    "test_set = ConversationIter(test_set, batch_size=batch_size)"
    ]
   },
   {
@@ -349,13 +444,13 @@
     "try:\n",
     "    from gradient_statsd import Client\n",
     "    has_gradient = True\n",
-    "    client = Client()\n",
+    "    gradient_client = Client()\n",
     "except ImportError:\n",
     "    print('gradient_statsd package is not installed, not using gradient metrics.')\n",
     "\n",
     "optimizer = Adafactor(model.parameters())\n",
     "\n",
-    "scaler = torch.cuda.amp.GradScaler()\n",
+    "scaler = torch.cuda.amp.GradScaler(enabled=use_half)\n",
     "\n",
     "start_time = datetime.now()\n",
     "\n",
@@ -370,15 +465,15 @@
     "    counter = 0\n",
     "    accrued_loss = 0\n",
     "    start = datetime.now()\n",
-    "    for i, (inputs, targets) in enumerate(conv_iter):\n",
-    "        mask = torch.tensor([inp.attention_mask for inp in inputs], device=device, dtype=torch.bool)\n",
+    "    for i, (inputs, targets, mask) in enumerate(conv_iter):\n",
+    "        mask = torch.tensor(mask, device=device, dtype=torch.bool)\n",
     "\n",
-    "        inputs = torch.tensor([inp.ids for inp in inputs], device=device)\n",
-    "        targets = torch.tensor([tar.ids for tar in targets], device=device)\n",
+    "        inputs = torch.tensor(inputs, device=device)\n",
+    "        targets = torch.tensor(targets, device=device)\n",
     "\n",
     "        optimizer.zero_grad()\n",
     "\n",
-    "        with torch.cuda.amp.autocast():\n",
+    "        with torch.cuda.amp.autocast(enabled=use_half):\n",
     "            loss = model(inputs, targets, mask=mask)\n",
     "\n",
     "        scaler.scale(loss).backward()\n",
@@ -403,10 +498,10 @@
     "def validate(conv_iter: ConversationIter):\n",
     "    model.eval(False)\n",
     "    with torch.no_grad():\n",
-    "        inp, tar = conv_iter.random_sample(amount=validate_amount)\n",
-    "        mask = torch.tensor([i.attention_mask for i in inp], device=device, dtype=torch.bool)\n",
-    "        inputs = torch.tensor([i.ids for i in inp], device=device)\n",
-    "        targets = torch.tensor([t.ids for t in tar], device=device)\n",
+    "        inputs, targets, masks = conv_iter.random_sample(amount=validate_amount)\n",
+    "        masks = torch.tensor(masks, device=device, dtype=torch.bool)\n",
+    "        inputs = torch.tensor(inputs, device=device)\n",
+    "        targets = torch.tensor(targets, device=device)\n",
     "        \n",
     "        loss = model(inputs, targets, mask=mask, return_loss=True)\n",
     "        print(f'Validation loss: {loss.item()}')\n",
@@ -457,15 +552,15 @@
     "    total_loss = train(train_set)\n",
     "\n",
     "    if has_gradient:\n",
-    "        client.increment('EPOCHS', 1)\n",
-    "        client.gauge('LOSS_PER_EPOCH', total_loss)\n",
+    "        gradient_client.increment('EPOCHS', 1)\n",
+    "        gradient_client.gauge('LOSS_PER_EPOCH', total_loss)\n",
     "\n",
     "    print(f'Epoch {epoch+1} took {(datetime.now()-total).total_seconds():.3f}s (with loss {total_loss})')\n",
     "\n",
     "    if validate_every > 0 and (epoch + 1) % validate_every == 0:\n",
     "        validate_loss = validate(test_set)\n",
     "        if has_gradient:\n",
-    "            client.gauge('VALIDATE_LOSS', validate_loss)\n",
+    "            gradient_client.gauge('VALIDATE_LOSS', validate_loss)\n",
     "\n",
     "    if save_every > 0 and (epoch + 1) % save_every == 0:\n",
     "        save_checkpoint(epoch + 1)\n",
@@ -486,7 +581,7 @@
     "        'gsutil',\n",
     "        '-o', 'GSUtil:parallel_composite_upload_threshold=600M',\n",
     "        'cp', model_file,\n",
-    "        os.path.join(model_dir, gsfolder, model_name)\n",
+    "        os.path.join(model_dir, gs_folder, model_name)\n",
     "    ])\n",
     "\n",
     "print('Finished training and saved model in models directory.')\n",
