Add max iter and allow flashback style for subs

--- a/train.ipynb
+++ b/train.ipynb
@@ -59,7 +59,7 @@
     "\n",
     "parser = ArgumentParser()\n",
     "parser.add_argument('-o', '--output', dest='output', default='', help='Location of output(s)')\n",
-    "parser.add_argument('-d', '--debug', type=str2bool, dest='debug', default=True, help='Debug logging specific files and extra verbosity')\n",
+    "parser.add_argument('-d', '--debug', type=str2bool, dest='debug', default=False, help='Debug logging specific files and extra verbosity')\n",
     "parser.add_argument('-c', '--use_cuda', type=str2bool, dest='use_cuda', default=True, help='Use cuda if cuda supported')\n",
     "parser.add_argument('--use_half', type=str2bool, dest='use_half', default=True, help='Use half precision on training (half precision seems to produce NaN\\'s)')\n",
     "parser.add_argument('-a', '--artifacts', dest='artifacts', default='', help='Directory to save artifacts such as checkpoints')\n",
@@ -67,6 +67,7 @@
     "parser.add_argument('-p', '--print_every', type=int, dest='print_every', default=100, help='After how many iterations to print a status')\n",
     "parser.add_argument('-v', '--validate_every', type=int, dest='validate_every', default=10, help='After how many epochs to validate loss on test set')\n",
     "parser.add_argument('--validate_amount', type=int, dest='validate_amount', default=4, help='How many entries of the test set to validate on, 0 for all (default 4)')\n",
+    "parser.add_argument('--max_iter', type=int, dest='max_iter', default=0, help='Maximum number of iterations per epoch, if set to 0 will use all')\n",
     "parser.add_argument('-s', '--save_every', type=int, dest='save_every', default=0, help='After how many epochs before saving a checkpoint (0 to turn off)')\n",
     "parser.add_argument('-t', '--test_split', type=float, dest='test_split', default=0.3, help='How much of the dataset to reserve for test/validate (between 0 and 1 exclusive)')\n",
     "parser.add_argument('-b', '--batch_size', type=int, dest='batch_size', default=1, help='Batch size to train on')\n",
@@ -94,6 +95,7 @@
     "validate_every = max(args.validate_every, 0)\n",
     "save_every = max(args.save_every, 0)\n",
     "batch_size = max(args.batch_size, 1)\n",
+    "max_iter = max(args.max_iter, 0)\n",
     "test_split = args.test_split\n",
     "if test_split <= 0 or test_split >= 1:\n",
     "    test_split = 0.3\n",
@@ -260,7 +262,7 @@
     "    for f in dir:\n",
     "        filepath = os.path.join(os.getcwd(), 'data', folder, f)\n",
     "        if not os.path.isfile(filepath): continue\n",
-    "        if debug_mode and False:\n",
+    "        if debug_mode:\n",
     "            print(f'  Opening file: {f}')\n",
     "        with open(filepath, 'r', encoding='utf-8', errors='ignore') as sub_file:\n",
     "            is_event = False\n",
@@ -292,7 +294,9 @@
     "                line[len(current_format)-1] = ','.join(line[len(current_format)-1:])\n",
     "                dialogue = dict(zip(current_format, line))\n",
     "                if not dialogue['Style'].lower() in ['main', 'default', 'italics', 'flashback', 'ngnl-main'] and \\\n",
-    "                    not 'main' in dialogue['Style'].lower() and not 'default' in dialogue['Style'].lower():\n",
+    "                    not 'main' in dialogue['Style'].lower() and \\\n",
+    "                    not 'default' in dialogue['Style'].lower() and \\\n",
+    "                    not 'flashback' in dialogue['Style'].lower():\n",
     "                    continue\n",
     "                # Extract variables\n",
     "                speaker = ''\n",
@@ -493,6 +497,9 @@
     "            total_loss += accrued_loss\n",
     "            accrued_loss = 0\n",
     "            start = datetime.now()\n",
+    "\n",
+    "        if i >= max_iter:\n",
+    "            break\n",
     "    return total_loss / max(counter, 1)\n",
     "\n",
     "def validate(conv_iter: ConversationIter):\n",
